Fix navbar button spacing when logged out

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -183,14 +183,14 @@ button {
   flex: 1 0 0;
   color: var(--text_normal);
   font-size: 14px;
-  width: 220px;
+  width: 140px;
   padding: 5px;
 }
 
 .navbar-right {
   display: flex;
   flex-direction: row;
-  width: 40%;
+  width: 60%;
   justify-content: flex-end;
   gap: 25px;
 }
@@ -246,8 +246,11 @@ button {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 10%;
   padding-left: max(25px, 2%);
+}
+
+.navbar-buttons a {
+  padding-left: 10px;
 }
 
 .navbutton {
